--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "smol-toml": "1.3.1",
     "strip-ansi": "7.1.0",
     "to-fast-properties": "4.0.0",
+    "trim-newlines": "5.0.0",
     "typescript": "5.8.2",
     "unicode-regex": "4.1.2",
     "unified": "9.2.2",
